--- a/package.json
+++ b/package.json
@@ -10,8 +10,25 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/material-bottom-tabs": "^6.2.3",
+    "@react-navigation/native": "^6.0.12",
+    "@react-navigation/stack": "^6.2.3",
+    "@reduxjs/toolkit": "^1.8.5",
+    "lottie-react-native": "^5.1.4",
     "react": "17.0.2",
-    "react-native": "0.68.2"
+    "react-native": "0.68.2",
+    "react-native-bouncy-checkbox": "^3.0.4",
+    "react-native-dotenv": "^3.3.1",
+    "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "^2.6.0",
+    "react-native-google-places-autocomplete": "^2.4.1",
+    "react-native-paper": "^4.12.4",
+    "react-native-reanimated": "^2.10.0",
+    "react-native-safe-area-context": "^4.3.3",
+    "react-native-screens": "^3.17.0",
+    "react-native-vector-icons": "^9.2.0",
+    "react-redux": "^8.0.2",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22"
   },
   "devDependencies": {
     "@babel/core": "7.18.13",
